--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -203,14 +203,16 @@
   touch-action:manipulation;}
 
 [role="button"],
-[role="switch"]{
+[role="switch"],
+[role="checkbox"]{
   outline-offset:var(--ui-outline-offset);
   outline-width:var(--ui-outline-width);
   outline-style:var(--ui-outline-style);
   outline-color:var(--ui-outline-color-inactive);}
 
 [role="button"]:focus-visible:not([disabled]),
-[role="switch"]:focus-visible:not([disabled]){
+[role="switch"]:focus-visible:not([disabled]),
+[role="checkbox"]:focus-visible:not([disabled]){
   outline-color:var(--ui-outline-color-active);}
 
 [disabled]:not([loading]){
