--- a/ui/ui-select/ui-select.css
+++ b/ui/ui-select/ui-select.css
@@ -40,7 +40,7 @@ ui-select{
   &:focus-visible:not([disabled]){
     outline-color:var(--ui-select-outline-color);}
 
-  & [data-ui="select-text"]{
+  & [role="textbox"]{
     flex-grow:1;
     padding-inline-end:6px;
     font-size:var(--ui-select-font-size);
@@ -48,12 +48,12 @@ ui-select{
     white-space:nowrap;
     text-overflow:ellipsis;}
 
-  & [data-ui="select-icon-expand"] ui-icon{
+  & ui-icon{
     width:var(--ui-select-icon-size);
     transition-duration:var(--ui-transition-duration-default);
     transition-property:transform;}
 
-  &[aria-expanded="true"] [data-ui="select-icon-expand"] ui-icon{
+  &[aria-expanded="true"] ui-icon{
     transform:rotate(180deg);}
 
   /* shape */
@@ -63,7 +63,8 @@ ui-select{
 }
 
 [role="listbox"]{
-  --ui-select-icon-size:15px;
+  --ui-listbox-border-radius:var(--ui-border-radius-default);
+  --ui-listbox-icon-size:15px;
   --ui-listbox-font-size:13px;
   --ui-listbox-background-color:var(--ui-color-gray-800);
   --ui-listbox-option-background-color-hover:var(--ui-color-gray-650);
@@ -77,7 +78,8 @@ ui-select{
   display:inline-flex;
   flex-direction:column;
   padding:6px;
-  outline:none;
+  border:none;
+  border-radius:var(--ui-listbox-border-radius);
   color:var(--ui-listbox-font-color);
   background-color:var(--ui-listbox-background-color);
   z-index:9999;
@@ -102,7 +104,7 @@ ui-select{
 
   & [role="option"] > ui-icon{
     height:100%;
-    width:var(--ui-select-icon-size);}
+    width:var(--ui-listbox-icon-size);}
 
   & [role="option"]{
     transition-duration:var(--ui-transition-duration-default);
